--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
   "name": "spark",
   "version": "1.0.0",
-  "description": "",
+  "description": "Authentication API with Node.js and Express",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "node --watch index.js",
+    "init-db": "node -e \"import('./lib/initDb.js').then(m => m.default())\"",
+    "test": "node test-auth.js",
+    "test:auth": "node test-auth.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "@neondatabase/serverless": "^0.7.2",
+    "node-fetch": "^3.3.2"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/samalsubrat/spark.git"
   },
-  "keywords": [],
+  "keywords": ["authentication", "api", "nodejs", "express"],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/samalsubrat/spark/issues"
   },
