--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,10 @@ services:
     env: docker
     plan: free
     autoDeploy: true
+    dockerfilePath: water_quality/Dockerfile   # <-- Add this line
     envVars:
       - key: MODEL_PATH
-        value: models/model.pkl
+        value: water_quality/models/model.pkl  # <-- Update path if model is inside water_quality
     # Optional: add a persistent disk if your model is large
     # disks:
     #   - name: model-disk
