--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas
-scikit-learn
-joblib
-fastapi
-uvicorn
+pandas>=2.0.0
+scikit-learn>=1.3.0
+joblib>=1.3.0
+fastapi>=0.100.0
+uvicorn[standard]>=0.23.0
