Add Backend Processes

--- a/package.json
+++ b/package.json
@@ -6,29 +6,42 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js",
-    "init-db": "node -e \"import('./lib/initDb.js').then(m => m.default())\"",
+    "dev": "nodemon index.js",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push",
+    "prisma:studio": "prisma studio",
+    "seed": "node ./scripts/seed.js",
     "test": "node test-auth.js",
     "test:auth": "node test-auth.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@neondatabase/serverless": "^0.7.2",
+    "@prisma/client": "^6.16.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "@neondatabase/serverless": "^0.7.2",
     "node-fetch": "^3.3.2"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/samalsubrat/spark.git"
   },
-  "keywords": ["authentication", "api", "nodejs", "express"],
+  "keywords": [
+    "authentication",
+    "api",
+    "nodejs",
+    "express"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/samalsubrat/spark/issues"
   },
-  "homepage": "https://github.com/samalsubrat/spark#readme"
+  "homepage": "https://github.com/samalsubrat/spark#readme",
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prisma": "^6.16.0"
+  }
 }
