--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
+# Database
+DATABASE_URL="postgresql://user:password@host:5432/dbname?schema=public"
+
+# Auth
+JWT_SECRET="replace-with-a-strong-secret"
+
+# Server
 PORT=8080
