--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "framer-motion": "^12.23.12",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.543.0",
+    "lucide-solid": "^0.544.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
